# WS

./: .flake8  .gitignore  alembic.ini  docker-compose.yaml  pyproject.toml
ws/: Dockerfile  config.py  entrypoint.sh  main.py
ws/api/: dependencies.py  exceptions.py
ws/api/exceptions/: auth.py  base.py  user.py
ws/api/routers/: auth_routes.py  warehouse_router.py
ws/api/schemas/: __init__.py  item.py  list_pagination.py  user.py  warehouse.py
ws/db/: exceptions.py  session.py  types.py
ws/db/commands/: __init__.py  command_manager.py  commands.py  user_commands.py  warehouse_commands.py
ws/db/dto/: __init__.py  user_dto.py
ws/db/managers/: __init__.py  manager.py  user_manager.py  warehouse_items_service.py  warehouse_manager.py
ws/db/models/: __init__.py  base.py  characteristics.py  characteristics_items.py  item_types.py  items.py  order_statuses.py  orders.py  roles.py  users.py  warehouse_items.py  warehouses.py
ws/db/reflections/: reflector.py
ws/db/repository/: __init__.py  base_repository.py  exceptions.py  joined_repoistory.py  role_repositor.py  role_repository.py  user_repository.py
ws/db/uow/: base.py
ws/dto/: __init__.py  base.py  item.py  role.py  role_dto.py  token.py  user.py  user_dto.py  warehouses.py
ws/migrations/: env.py
ws/migrations/versions/: 58bd918995a9_create_item_types_table.py  (+9 more)
ws/service/: auth_service.py  base.py  registration_service.py  warehouse_service.py
ws/test/: conftest.py  test_neon_connection.py
ws/utils/: alembic_utils.py  date.py  decorators.py  func.py  security.py
(+22 files in other folders)
